--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@ node_modules
 
 /prisma/dev.db
 .env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
