--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "js-quiz",
+  "version": "0.0.1",
+  "description": "Remix based JavaScript Quiz game",
+  "repository": "https://github.com/blackskip-notOk/JSQuiz",
+  "homepage": "https://js-quiz-blackskip.vercel.app/",
+  "author": "Ilya Babanov <ilbabanov@gmail.com>",
+  "license": "MIT",
   "private": true,
   "sideEffects": false,
   "prisma": {
@@ -7,7 +14,10 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "lint:write": "eslint --debug app/ --fix",
+    "prettier": "prettier --write app/**/*.{ts,tsx}",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@prisma/client": "^4.1.1",
@@ -26,10 +36,26 @@
     "@types/react-dom": "^17.0.17",
     "esbuild-register": "^3.3.3",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "prisma": "^4.1.1",
     "typescript": "^4.7.4"
   },
   "engines": {
     "node": ">=14"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "test"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "yarn run lint:write",
+      "yarn run prettier"
+    ]
   }
 }
