--- a/package.json
+++ b/package.json
@@ -25,13 +25,22 @@
     "@remix-run/react": "^1.6.5",
     "@remix-run/serve": "^1.6.5",
     "bcryptjs": "^2.4.3",
+    "i18next": "^21.8.16",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-fs-backend": "^1.1.4",
+    "i18next-http-backend": "^1.4.1",
+    "luxon": "^3.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.3",
+    "remix-i18next": "^4.1.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.5",
     "@remix-run/eslint-config": "^1.6.5",
     "@types/bcryptjs": "^2.4.2",
+    "@types/i18next-fs-backend": "^1.1.2",
+    "@types/luxon": "^3.0.0",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
     "esbuild-register": "^3.3.3",
